# FastAPI-app-template

./: Dockerfile  Makefile  README.md  alembic.ini  manage.py  pyproject.toml
app/api/: application.py  bootstrap.py  main.py
app/api/globals/: __init__.py  consts.py  exceptions.py  schemas.py
app/api/health_checks/: __init__.py  router.py
app/api/v1/: __init__.py  router.py
app/api/v1/template/: __init__.py  repository.py  router.py  schemas.py  service.py
app/api/v1/template/base/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py
app/core/: settings.py
app/core/database/: __init__.py  core.py
app/core/database/models/: README.md  __init__.py
app/core/database/models/template/: __init__.py  template.py
app/core/database/revisions/: README  env.py
app/core/database/revisions/versions/: 5d47ac896e82_template_table.py
app/core/logging/: config.yml  core.py
compose/local/: .env_example  docker-compose.yml
tests/: conftest.py
tests/api/: conftest.py
tests/api/health_checks/: test_health_checks.py
tests/api/v1/template/: conftest.py
tests/api/v1/template/base/: test_create_template.py  test_get_template_by_id.py  test_get_templates_list.py
tests/api/v1/template/base/mocks/: request_create_template.json  response_get_template_by_id.json  response_get_templates_list.json
tests/database/: test_creation_tables.py
tests/helpers/preload/: utils.py
tests/utils/: common.py
